# tmol

./: .buildinfo  .clang-format  .codecov.yml  .dockerignore  .envrc  .flake8  .gitignore  .gitmodules  .lvimrc  .ninja_deps  .ninja_log  .post-checkout  .pre-commit  .pre-commit-config.yaml  .skbuild-info.json  .style.yapf  .travis.yml  .ycm_extra_conf.py  CMakeCache.txt  CMakeInit.txt  CMakeLists.txt  CNAME  DEVELOPMENT.md  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  architecture.html  build.ninja  cmake_install.cmake  codecov.yml  datatypes.html  dev_env.sh  dev_environment.yml  dev_setup  docker-compose.yml  env.dev.export.yml  env.yml  environment.yml  (+18 more)
.buildkite/: docker-compose.yml  pipeline.yml
.buildkite/hooks/: command  environment  post-checkout  pre-command  pre-exit
.buildkite/runner/: Dockerfile
.buildkite/test/: Dockerfile
.circleci/: config.yml  fixup_test_report.py
.claude/: settings.local.json
.github/ci/: build_package.sh  exec_gpu_apptainer.sh  gpu_env.sh  restore_source_timestamps.sh  run_benchmarks.sh  run_ci_gpu_work.sh  run_cpu_tests.sh  run_gpu_tests.sh  setup_ci_venv.sh  srun_cpu.sh  srun_gpu_retry.sh
.github/workflows/: _build_wheel.yml  build_wheel.yml  ci.yml  publish.yml  wheel-smoke.yml
_images/: aafig-1018b0225ec86109e1c4623317b4cf895ae8058f.svg.aafig  aafig-8a39b57095859a26ff4f9503fa008d0aa46a71a9.svg.aafig  aafig-9a2352ec78aa0ad81380b50eb76a8f66261e6a4e.svg.aafig  aafig-c3222d2549d41aeeac19a556de3c7f80c0c51f46.svg.aafig  aafig-e1e990cba2f5691126cbb63f58a4502a3bf14539.svg.aafig  aafig-f03b9f97eab59aad88629b36130b928dbaf11182.svg.aafig
_modules/: _weakrefset.html  index.html  numpy.html  torch.html
_modules/tmol/: database.html  extern.html  score.html  utility.html  viewer.html
_modules/toolz/: functoolz.html
_sources/: placeholder.rst.txt
_sources/apidoc/: modules.rst.txt  tmol.database.chemical.rst.txt  tmol.database.rst.txt  tmol.database.scoring.cartbonded.rst.txt  tmol.database.scoring.dunbrack_libraries.rst.txt  tmol.database.scoring.elec.rst.txt  tmol.database.scoring.hbond.rst.txt  tmol.database.scoring.ljlk.rst.txt  tmol.database.scoring.rama.rst.txt  tmol.database.scoring.rst.txt  tmol.extern.py3dmol.rst.txt  tmol.extern.rst.txt  tmol.io.extern.rst.txt  tmol.io.generic.rst.txt  tmol.io.pdb_parsing.rst.txt  tmol.io.rst.txt  tmol.kinematics.builder.rst.txt  tmol.kinematics.compiled.compiled.rst.txt  tmol.kinematics.compiled.rst.txt  tmol.kinematics.cpu_operations.jit.rst.txt  tmol.kinematics.cpu_operations.rst.txt  tmol.kinematics.datatypes.rst.txt  tmol.kinematics.gpu_operations.derivsum.rst.txt  tmol.kinematics.gpu_operations.derivsum_jit.rst.txt  tmol.kinematics.gpu_operations.forward.rst.txt  tmol.kinematics.gpu_operations.forward_jit.rst.txt  tmol.kinematics.gpu_operations.rst.txt  (+132 more)
_static/: documentation_options.js
apidoc/: modules.html  tmol.database.chemical.html  tmol.database.html  tmol.database.scoring.cartbonded.html  tmol.database.scoring.dunbrack_libraries.html  tmol.database.scoring.elec.html  tmol.database.scoring.hbond.html  tmol.database.scoring.html  tmol.database.scoring.ljlk.html  tmol.database.scoring.rama.html  tmol.extern.html  tmol.extern.py3dmol.html  tmol.html  tmol.io.extern.html  tmol.io.generic.html  tmol.io.html  tmol.io.pdb_parsing.html  tmol.kinematics.builder.html  tmol.kinematics.compiled.compiled.html  tmol.kinematics.compiled.html  tmol.kinematics.cpu_operations.html  tmol.kinematics.cpu_operations.jit.html  tmol.kinematics.datatypes.html  tmol.kinematics.gpu_operations.derivsum.html  tmol.kinematics.gpu_operations.derivsum_jit.html  tmol.kinematics.gpu_operations.forward.html  tmol.kinematics.gpu_operations.forward_jit.html  tmol.kinematics.gpu_operations.html  tmol.kinematics.gpu_operations.scan_jit.html  tmol.kinematics.gpu_operations.scan_paths.html  tmol.kinematics.gpu_operations.scan_paths_jit.html  tmol.kinematics.html  tmol.kinematics.metadata.html  tmol.kinematics.operations.html  tmol.kinematics.scan_ordering.html  tmol.kinematics.script_modules.html  tmol.kinematics.torch_op.html  tmol.numeric.bspline.html  tmol.numeric.bspline_compiled.compiled.html  tmol.numeric.bspline_compiled.html  (+119 more)
dev/: 180212_numba_guvectorize_cross.ipynb  180213_numeric_trait_types_fused_dim_stride.ipynb  180308_polybb_variable_lj_params_and_lin_damping.ipynb  180308_sparse_lj_evaluation.ipynb  180313_polybb_connected_reactive_model.ipynb  1809_lj_impl_benchmarking.ipynb  1809_lj_potential.ipynb  1809_lj_potential_debugging.ipynb  1809_lj_potential_impl_benchmarking.ipynb  1809_score_benchmarking.ipynb  1809_toy_lj_impl_benchmarking.ipynb  README.md  cpp_extension_profiling.ipynb  generate_residue_database.ipynb  kinematics.py  lbfgs_armijo.py  lk_ball.ipynb  minimization_demo.ipynb  naiveresiduesystem.ipynb  pdb_parsing.py  sparse_bond_graph.ipynb  test_lbfgs_armijo.py
docs/: .expected_warnings  .gitignore  .lvimrc  Makefile  README.md  architecture.rst  conf.py  datatypes.rst  index.rst  make  update-gh-pages  watch  watchmedo.yml
environments/: README.md  core.dependencies.txt  core.requirements.txt  core.yml  cuda.dependencies.txt  dev.dependencies.txt  dev.requirements.txt  dev.yml  docs.dependencies.txt  docs.requirements.txt  docs.yml  env-dev.yml  env.yml  linux.cpu.dependencies.txt  linux.cuda.dependencies.txt  osx.cpu.dependencies.txt  render  requirements-dev.in  requirements.in  support.channels.txt  support.dependencies.txt  test.dependencies.txt  test.requirements.txt  test.yml
metal_air/: metal_primitives.air
notebooks/: example_01_score_a_pdb_file.ipynb  tmol_how_to_guide.ipynb
pytorch/: build.sh
pytorch_build/: build.sh  environment.yml
requirements/: core.dependencies.txt  test.dependencies.txt  test.requirements.txt
scripts/: repair_linux_wheel.sh  tag_wheel_local_version.py  validate_release_manifest.py
tmol/: __init__.py  _cpp_lib.py  _cuda_env.py  _load_ext.py  kinematics.py  load_1ubq_pose.py  meta.yaml  minimize.py  residue_type.py  score.py  steal_rts_from_rosetta.py  system.py  tmol_primitives.metallib  traits.py  ubq.pickle  viewer.py
(+1922 files in other folders)
